# AnthropicXPenn-Hackathon

./: .env  .gitignore  README.md  invoices.db  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  FILE_SUMMARY.md  Invoice-Insights-API.postman_collection.json  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  START_HERE.md  docker-compose.yml  package-lock.json  package.json  server.js  setup.sh  test-api.sh
backend/config/: database.js
backend/database/: migrate.js
backend/middleware/: auth.js
backend/routes/: analytics.js  auth.js  chat.js  invoices.js
backend/services/: claude.js  s3.js
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Chat.jsx  Dashboard.jsx  Invoices.jsx  Login.jsx
frontend/src/services/: api.js
src/: main.py  ocr.py  seed_invoices.py  web_app.py
src/anthropicxpenn_hackathon/: __init__.py
src/templates/: index.html
