[project]
name = "anthropicxpenn-hackathon"
version = "0.1.0"
description = "Basic Python project scaffold managed with uv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[google-genai]>=1.0.6",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.3",
    "langchain-google-vertexai>=3.0.3",
    "ipython>=9.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/anthropicxpenn_hackathon"]



